Some overlay ids getting registered twice or not at all b=351217 r=jst sr=bz